fixed overflowing

--- a/src/Pages/UserProfilePage.css
+++ b/src/Pages/UserProfilePage.css
@@ -110,6 +110,7 @@
   justify-content: center;
   flex-wrap:wrap;
   gap: 5rem;
+  margin-bottom:10rem;
 
 }
 
