--- a/src/Pages/eventPage.css
+++ b/src/Pages/eventPage.css
@@ -24,6 +24,7 @@ cursor: pointer;
   margin-right: 1rem;
   margin-left:2rem;
   border-right: 0px;
+  margin-bottom:4rem;
 
 }
 .category-title{
