--- a/src/Pages/sponsors.css
+++ b/src/Pages/sponsors.css
@@ -146,7 +146,7 @@ body {
   .sponsi-card-text h2 {
     margin: 0;
     line-height: 1.35em;
-    font-weight: ;
+    font-weight: 2.4rem;
   }
   
   @media (max-width:960px){
